--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+  <style>
+    html {
+      background: linear-gradient(0deg, rgb(220, 238, 238), rgb(230, 250, 250), rgb(252, 256, 256), rgb(230, 240, 240));
+      height: 100%;
+    }
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
